import React from 'react';
import type { OptionType } from '@mobile-reality/react-native-select-pro';
import { Select } from '@mobile-reality/react-native-select-pro';

import { SafeAreaViewWrapper } from '../components/safe-area-view-wrapper';

export const DATA = [
    {
        value: '96d27ec5-e196-4577-b18d-31c74ca9145c',
        label: 'First label',
    },
    {
        value: '2805f95f-f712-4dc2-ae25-0910f95152b6',
        label: 'Second label in options list.',
    },
    {
        value: '84bc47cd-c8ab-4673-b428-3d96876f0a3f',
        label: 'THIRD LABEL',
    },
    {
        value: 'aee6e7cd-6f36-4e69-acae-0dbfdaa428e4',
        label: '----Fourth label----',
    },
    {
        value: '170dcd29-0fd5-4f8b-ac76-7d52cdeca89c',
        label: '🐈🐈🐈 Fifth label',
    },
    {
        value: '0b8e1c91-e6d5-487e-bac5-8e1193d2e6f7',
        label: 'Last',
    },
];

export const loadOptions = (searchValue: string): Promise<OptionType[]> => {
    return new Promise((resolve) => {
        setTimeout(() => {
            const filteredOptions = DATA.filter((option) =>
                option.label.toLowerCase().includes(searchValue.toLowerCase()),
            );
            resolve(filteredOptions);
        }, 1000);
    });
};

export const AsyncSelect = () => {
    return (
        <SafeAreaViewWrapper>
            <Select options={[]} searchable={true} loadOptions={loadOptions} />
        </SafeAreaViewWrapper>
    );
};
