...
    noOptionsText?: string;

    /**
     * Placeholder text
     *
     * @category Text
     * @default "Select..."
     */
    placeholderText?: string;

    //---ANIMATIONS---//
    /**
     *  If `true` toggling the select is animated
...
